# kaggle_titanic_machine_learning_from_disaster

./: README.md  pyproject.toml
notebooks/: titanic_modeling.ipynb
submissions/: resultado_titanic.csv
