[tool.poetry]
name = "kaggle-titanic-machine-learning-from-disaster"
version = "0.1.0"
description = "Solução para o desafio Titanic ML no Kaggle: previsão de sobreviventes do naufrágio usando aprendizado de máquina. Inclui preparação de dados, testes com diferentes modelos e otimização de hiperparâmetros."
authors = ["Matheus Abrantes <abrantes_matheus@icloud.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10"
xgboost = "^2.1.3"
numpy = "<=2.0.0"
pandas = "^2.2.1"
scikit-learn = "1.4.2"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scipy = "^1.15.1"
lightgbm = "^4.5.0"
catboost = "^1.2.7"
feature-engine = "^1.8.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
